--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <link rel="stylesheet" href="./src/style.css" />
     </head>
     <body>
+        <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
+            <span class="menu-icon">☰</span>
+        </button>
+        <div id="backdrop" class="backdrop"></div>
         <div id="app">
-            <div id="sidebar">
+            <div id="sidebar" class="sidebar">
                 <div class="header">
                     <div>
                         <h1>Roadtrip Planner</h1>
